# Jarvis

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-29-jarvis-phase1-mvp.md  2026-06-30-jarvis-phase2a-memory.md
docs/superpowers/specs/: 2026-06-29-jarvis-desktop-agent-design.md  2026-06-30-jarvis-phase2-memory-design.md
jarvis/: __main__.py
jarvis/brain/: claude_engine.py  engine.py  router.py
jarvis/core/: bus.py  config.py  daemon.py
jarvis/gui/: orb.py  palette.py  theme.py
jarvis/input/: hotkey.py
jarvis/memory/: service.py  store.py  tools.py
jarvis/tools/: __init__.py  apps.py  base.py  files.py  system.py  web.py  windows.py
tests/: test_bus.py  test_claude_engine.py  test_config.py  test_config_memory.py  test_daemon_confirm.py  test_daemon_memory.py  test_engine_types.py  test_hotkey.py  test_memory_service.py  test_memory_store.py  test_memory_tools.py  test_orb_state.py  test_router.py  test_router_memory.py  test_tools_apps.py  test_tools_base.py  test_tools_files.py  test_tools_system.py  test_tools_web.py  test_tools_windows.py
