[project]
name = "jarvis"
version = "0.1.0"
description = "Personal desktop agent (Phase 1 MVP)"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "anthropic>=0.40",
    "pynput>=1.7",
    "psutil>=6.0",
    "pygetwindow>=0.0.9",
    "pyautogui>=0.9.54",
    "pywin32>=306; sys_platform == 'win32'",
    "keyring>=25",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
jarvis = "jarvis.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
